--- a/dev_credentials.properties
+++ b/dev_credentials.properties
@@ -13,7 +13,7 @@ qa_store.password=123456
 qa_key.alias=key
 qa_key.password=123456
 # Others
-dev.project.certificate_pin="sha256/EULwXgsgjhagsdjhWAskshdUpsnU09mUTAskFARTg="
+dev.project.certificate_pin=sha256/EULwXgsgjhagsdjhWAskshdUpsnU09mUTAskFARTg=
 dev.db_version=1
 dev.clear_cache=false
 dev.map_key=89hkehkjeiuhjkhihiuhiuiuyiu8i
